feat: implement enterprise business suite components, foundation services, and comprehensive integration testing suite.